Fix button alignment bug

--- a/website/src/styles/AddLaptimeForm.css
+++ b/website/src/styles/AddLaptimeForm.css
@@ -7,7 +7,47 @@
 }
 
 .addLaptimeForm input {
-    height: 1em;
-    border-radius: 10px;
+    height: 1.5em;
     text-align: center;
+}
+
+.addLaptimeForm input[type="text"] {
+    border-radius: 8px;
+}
+
+.addLaptimeForm input[type="checkbox"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    height: 100%;
+    /* set the height to be the same size as the width */
+    aspect-ratio: 1/1;
+    border-radius: 3px;
+    background-color: white;
+    transition-duration: 0.3s;
+}
+
+.addLaptimeForm input[type="checkbox"]:checked {
+    background-color: red;
+}
+
+.addLaptimeForm input[type="checkbox"]:hover {
+    cursor: pointer;
+}
+
+.addLaptimeForm form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
+}
+
+.addLaptimeForm label {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0.5em;
+    height: 3em;
 }
